tests/baselines/reference/parser_breakTarget5.errors.txt
parser_breakTarget5.ts(5,7): error TS18055: Label 'target' used before declaration


==== parser_breakTarget5.ts (1 errors) ====
    target:
    while (true) {
      function f() {
        while (true) {
          break target;
          ~~~~~~~~~~~~~
!!! error TS18055: Label 'target' used before declaration
        }
      }
    }